--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "ganache-cli": "^6.12.2",
     "ipfs-http-client": "^58.0.1",
     "web3": "^1.8.0"
